--- a/project_task_stock/i18n/project_stock.pot
+++ b/project_task_stock/i18n/project_stock.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -29,6 +29,11 @@ msgid "Allowed to Unreserve Inventory"
 msgstr ""
 
 #. module: project_stock
+#: model:ir.model.fields,field_description:project_stock.field_project_task__analytic_distribution
+msgid "Analytic"
+msgstr ""
+
+#. module: project_stock
 #: model:ir.model,name:project_stock.model_account_analytic_line
 msgid "Analytic Line"
 msgstr ""
@@ -36,6 +41,11 @@ msgstr ""
 #. module: project_stock
 #: model:ir.model.fields,field_description:project_stock.field_project_task__stock_analytic_line_ids
 msgid "Analytic Lines"
+msgstr ""
+
+#. module: project_stock
+#: model:ir.model.fields,field_description:project_stock.field_project_task__analytic_precision
+msgid "Analytic Precision"
 msgstr ""
 
 #. module: project_stock
@@ -133,6 +143,7 @@ msgid "Inventory Moves"
 msgstr ""
 
 #. module: project_stock
+#. odoo-python
 #: code:addons/project_stock/models/project_task.py:0
 #, python-format
 msgid "It is not possible to change this with reserved movements in tasks."
@@ -149,7 +160,7 @@ msgid "Move Analytic Account"
 msgstr ""
 
 #. module: project_stock
-#: model:ir.model.fields,field_description:project_stock.field_project_task__stock_analytic_tag_ids
+#: model:ir.model.fields,field_description:project_stock.field_project_task__stock_analytic_distribution
 msgid "Move Analytic Tags"
 msgstr ""
 
@@ -200,6 +211,7 @@ msgid "Reserved"
 msgstr ""
 
 #. module: project_stock
+#. odoo-python
 #: code:addons/project_stock/models/project_task.py:0
 #: model:ir.model,name:project_stock.model_stock_scrap
 #: model_terms:ir.ui.view,arch_db:project_stock.view_task_form2
