--- a/project_key/i18n/fr.po
+++ b/project_key/i18n/fr.po
@@ -4,32 +4,22 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2021-05-14 18:47+0000\n"
+"POT-Creation-Date: 2023-01-18 15:37+0000\n"
+"PO-Revision-Date: 2023-01-18 16:37+0100\n"
 "Last-Translator: Yves Le Doeuff <yld@alliasys.fr>\n"
 "Language-Team: none\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.3.2\n"
-
-#. module: project_key
-#: model:ir.model.fields,field_description:project_key.field_project_project__display_name
-#: model:ir.model.fields,field_description:project_key.field_project_task__display_name
-msgid "Display Name"
-msgstr "Nom affiché"
-
-#. module: project_key
-#: model:ir.model.fields,field_description:project_key.field_project_project__id
-#: model:ir.model.fields,field_description:project_key.field_project_task__id
-msgid "ID"
-msgstr ""
+"X-Generator: Poedit 3.0.1\n"
 
 #. module: project_key
 #: model:ir.model.fields,field_description:project_key.field_project_project__key
+#: model:ir.model.fields,field_description:project_key.field_project_task__key
 msgid "Key"
 msgstr "Clé"
 
@@ -63,7 +53,7 @@ msgstr "Tâche"
 #. module: project_key
 #: model:ir.model.constraint,message:project_key.constraint_project_task_task_key_unique
 msgid "Task key must be unique!"
-msgstr "La clé de tâche doit être unique"
+msgstr "La clé de tâche doit être unique !"
 
 #. module: project_key
 #: model:ir.model.fields,field_description:project_key.field_project_task__url
