--- a/project_purchase_link/i18n/project_purchase_link.pot
+++ b/project_purchase_link/i18n/project_purchase_link.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 13.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -29,6 +29,7 @@ msgid "Project"
 msgstr ""
 
 #. module: project_purchase_link
+#. odoo-python
 #: code:addons/project_purchase_link/models/project_project.py:0
 #, python-format
 msgid "Purchase Invoice Lines"
@@ -46,12 +47,14 @@ msgid "Purchase Invoices"
 msgstr ""
 
 #. module: project_purchase_link
+#. odoo-python
 #: code:addons/project_purchase_link/models/project_project.py:0
 #, python-format
 msgid "Purchase Order"
 msgstr ""
 
 #. module: project_purchase_link
+#. odoo-python
 #: code:addons/project_purchase_link/models/project_project.py:0
 #, python-format
 msgid "Purchase Order Lines"
